fixed homepage overflow-x issue

--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -117,6 +117,7 @@
     @include breakpoint(md-tablet) {
       align-items: center;
       text-align: center;
+      width: auto;
     }
 
     &--product {
