--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -186,7 +186,6 @@
    ============================================== */
 
 .testimonials {
-  overflow: hidden;
   padding: 20rem 0;
   background-color: var(--blue-gray-50);
 
